# vam-package-browser

./: .gitignore  CLAUDE-followup.md  CLAUDE.md  README.md  TODO-classifier-residual.md  TODO-db-env-override.md  TODO-hub-sync.md  TODO-semantic-search-ui.md  TODO-visibility-presets.md  index.html  package-lock.json  package.json  run-dev.bat  setup.bat
.github/workflows/: release.yml
docs/: DEVELOPMENT.md
docs/archive/: COWORK-hub-recon.md  HANDOFF-embedding-to-ui.md  TODO-dependency-viewer.md  TODO-embedding-pipeline.md  TODO-ui-tag-hookup.md
labels/hub-sync/: notfound-sample-2026-05-19.csv
scripts/: analyze_labels.py  dev-env.cmd  inspect_slug_match.py  prefill_labels.py  probe-hub-download.cmd  probe_preview_state.py  purge-app-data.cmd  sample_notfound.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  commands_classifier.rs  deps.rs  fsutil.rs  holdout.rs  hub.rs  index.rs  lib.rs  main.rs  materialize.rs  meta.rs  paths.rs  propagation.rs  scanner.rs  setup.rs  thumbnails.rs  visibility.rs
src-tauri/src/embedding/: mod.rs  model.rs  runner.rs  search.rs  storage.rs
src-tauri/src/tagging/: family.rs  grok.rs  mod.rs  prompt.rs  record.rs  runner.rs  seeder.rs
src/components/: AuthorPicker.tsx  ClassifierPane.tsx  ContextMenu.tsx  DetailView.tsx  ErrorBoundary.tsx  FacetPanel.tsx  HubCategoryChips.tsx  HubSyncView.tsx  LoadVisibilityModal.tsx  PackageGrid.tsx  SelectionActionBar.tsx  SetupWizard.tsx  StatsPanel.tsx  TagChips.tsx  Toast.tsx  TypeChips.tsx
src/lib/: api.ts  tags.ts
tagging/: taxonomy-v3.json  taxonomy-v4.json
